--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Portfolio</title>
+    <script src="assets/js/index.js"></script>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com/"></script>
 </head>
 
@@ -52,17 +54,63 @@
             </p>
         </div>
     </section>
-    <section id="" class="bg-blue-200 h-[95vh] py-8">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-4">Carousel</h2>
-            <!-- Instructions -->
-            <div>
-                <h1 class="text-4xl">Assigned to Shahzaman Mazhar</h1>
-                <p class="">Make Carousel Form Section awesome as you like
-                    Use your creativity to make this section
-                </p>
+
+
+    <!-- Shahzaman's Code starts here -->
+
+
+    <div class="carousel">
+        <div class="slide">
+            <div class="slide-video">
+                <video autoplay loop muted>
+                    <source src="assets/images/v3.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="slide-content">
+                    <h2 class="typed-out">The Evolution of Computing</h2>
+                    <p class="typed-out"> Computing has come a long way since its inception, revolutionizing how we
+                        interact with technology. From early mechanical computers to modern supercomputers and quantum
+                        computing, computing has reshaped our world, enabling remarkable advancements in artificial
+                        intelligence and other fields.</p>
+                </div>
             </div>
-    </section>
+        </div>
+        <div class="slide">
+            <div class="slide-video">
+                <video autoplay loop muted>
+                    <source src="assets/images/v2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="slide-content">
+                    <h2 class="anim-typewriter">Artificial Intelligence: A New Era</h2>
+                    <p class="anim-typewriter">Artificial Intelligence (AI) marks a paradigm shift in technology. AI
+                        systems mimic human intelligence, learning from data and making decisions. This cutting-edge
+                        field is empowering various industries, from self-driving cars to natural language processing,
+                        pushing the boundaries of innovation and human-machine collaboration.</p>
+                </div>
+            </div>
+        </div>
+        <div class="slide">
+            <div class="slide-video">
+                <video autoplay loop muted>
+                    <source src="assets/images/v1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="slide-content">
+                    <h2 class="anim-typewriter">AI Ethics and Challenges</h2>
+                    <p class="anim-typewriter">As AI continues to thrive, we must grapple with ethical considerations
+                        and potential challenges. Issues such as bias in AI algorithms, data privacy, and the impact on
+                        jobs warrant careful examination. Striking the right balance between technological progress and
+                        societal well-being is vital for a sustainable AI-driven future.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="text-center text-white bg-black">Created by Shahzaman Mazhar</div>
+
+    <!-- Shahzaman's Code Ends here -->
+
+
     <section id="" class="h-[95vh] py-8">
         <div class=" px-4">
             <h2 class="text-3xl font-bold mb-4">About US</h2>
