Vaneeza Noor's Code

--- a/index.html
+++ b/index.html
@@ -12,32 +12,28 @@
 
 <body class="bg-gray-100">
 
-    <section class="py-2 bg-green-300">
-        <div>LOGO</div>
-        <div>
-            <a href="" class="px-4">item 1</a>
-            <a href="" class="px-4">item 2</a>
-            <a href="" class="px-4">item 3</a>
-            <a href="" class="px-4">item 4</a>
-        </div>
-        <div>
-            <a href="#" class="px-4">Login</a>
-            <a href="#" class="px-4">Sign Up</a>
-        </div>
-        <!-- Instructions -->
-        <div>
-            <h1 class="text-4xl">Assigned to Vaneeza Noor</h1>
-            <p class="">Make logo beautiful, complete the navigation bar.
-            <ul class="list-inside">
-                <li>(i) Make the logo cool</li>
-                <li>(ii) Arrange the nav</li>
-                <li>(iii) Arrange the nav</li>
-                <li>(iv) make login and signup buttons</li>
-            </ul>
+    <!-- Vaneeza Noor's Code Starts here -->
 
-            </p>
+    <header>
+        <div class="logo">LOGO</div>
+        <nav>
+            <ul>
+                <li><a href="#">Carousel</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Photo Gallery</a></li>
+                <li><a href="#">Testimonials</a></li>
+            </ul>
+        </nav>
+        <div class="auth-buttons">
+            <a href="#" class="login-btn">Login</a>
+            <a href="#" class="signup-btn">Sign Up</a>
         </div>
-    </section>
+    </header>
+    <div class="text-center text-white bg-black">Created by Vaneeza Noor</div>
+
+
+    <!-- Vaneeza Noor's Code Ends here -->
 
     <section class="py-4 h-[95vh] bg-yellow-300">
         <h1 class="text-4xl font-bold">BSCS@2021__B</h1>
