--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Combine Project</title>
     <link rel="stylesheet" href="Style.CSS">
+    <script src="https://cdn.tailwindcss.com/"></script>
 </head>
 <body>
     <header>
