added subjects name

--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
         <h2 class="text-4xl">Subjects</h2>
         <div>
             <!-- Instructions -->
-            <h1 class="text-4xl">Assigned to Khadija</h1>
-            <p class="">Make Subjects Section awesome as you like
-            <ul class="list-inside">
-                <li>(i) Heading on the top</li>
-                <li>(ii) 6-8 divs, with proper height and width, looking like a box</li>
-                <li>(iii) in that box, subjects should be written, lorem text can be</li>
-                <li>(iv) use hover affect and rouned corners as well</li>
-                Note: Use Flex Property for that to make it responsive
-            </ul>
-            </p>
+            <h1 class="sub">Subjects</h1>
+            <div class="container">
+                <div class="subject 1">Physics </div>
+                <div class="subject 2">Math</div>
+                <div class="subject 3">Chemistry</div>
+                <div class="subject 4">Biology</div>
+                <div class="subject 5">Urdu</div>
+                <div class="subject 6">Islamic Studies</div>
+                <div class="subject 7">English</div>
+            </div>
         </div>
     </section>
 
