updated styles and code

--- a/index.html
+++ b/index.html
@@ -125,21 +125,56 @@
         </div>
     </section>
 
-    <section id="" class="bg-blue-300 h-[95vh] py-8">
-        <h2 class="text-4xl">Subjects</h2>
-        <div>
-            <!-- Instructions -->
-            <h1 class="sub">Subjects</h1>
-            <div class="container">
-                <div class="subject 1">Physics </div>
-                <div class="subject 2">Math</div>
-                <div class="subject 3">Chemistry</div>
-                <div class="subject 4">Biology</div>
-                <div class="subject 5">Urdu</div>
-                <div class="subject 6">Islamic Studies</div>
-                <div class="subject 7">English</div>
-            </div>
-        </div>
+    <!-- Khadija's Code starts here -->
+
+    <section id="subjects-section">
+        <h2>Subjects</h2>
+        <p class="sub">List of subjects:</p>
+        <ul>
+        <li>
+            <strong>Physics</strong>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris facilisis volutpat purus, non fringilla tortor gravida ac.
+            </p>
+        </li>
+        <li>
+            <strong>Math</strong>
+            <p>
+                Nulla facilisi. Vestibulum fermentum dui in ipsum tincidunt, eu hendrerit odio consectetur.
+            </p>
+        </li>
+        <li>
+            <strong>Chemistry</strong>
+            <p>
+                Sed aliquam varius malesuada. Sed feugiat odio nec tortor dictum, sit amet ullamcorper velit semper.
+            </p>
+        </li>
+        <li>
+            <strong>Biology</strong>
+            <p>
+                In hac habitasse platea dictumst. Curabitur vel metus id mi dictum feugiat.
+            </p>
+        </li>
+        <li>
+            <strong>Urdu</strong>
+            <p>
+                Fusce consectetur cursus nibh, in maximus arcu blandit ac.
+            </p>
+        </li>
+        <li>
+            <strong>Islamic Studies</strong>
+            <p>
+                Suspendisse et ligula facilisis, viverra risus vel, fringilla felis.
+            </p>
+        </li>
+        <li>
+            <strong>English</strong>
+            <p>
+                Proin sed elit quis sem elementum posuere sit amet a tellus.
+            </p>
+        </li>
+    </ul>
+
     </section>
 
     <section id="" class="h-[95vh] bg-purple-300 py-8">
