--- a/index.html
+++ b/index.html
@@ -35,19 +35,22 @@
 
     <!-- Vaneeza Noor's Code Ends here -->
 
-    <section class="py-4 h-[95vh] bg-yellow-300">
-        <h1 class="text-4xl font-bold">BSCS@2021__B</h1>
-        <p class="text-lg">Students | Aspiring Web Developers</p>
-        <!-- Instructions -->
-        <div>
-            <h1 class="text-4xl">Assigned to Noor Fatima Zafar</h1>
-            <p class="">Make the hero section awesome as you like
-            <ul class="list-inside">
-                <li>(i) make the text center</li>
-                <li>(ii) add technical image to background</li>
-                <li>(iii)Add overlay color on hover on whole background</li>
-            </ul>
-            </p>
+    <section class="py-4 h-[95vh] bg-yellow-300 py-8">
+        <div class="container mx-auto px-4">
+
+            <h1 class="text-4xl font-bold">BSCS@2021__B</h1>
+            <p class="text-lg">Students | Aspiring Web Developers</p>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Noor Fatima Zafar</h1>
+                <p class="">Make the hero section awesome as you like
+                <ul class="list-inside">
+                    <li>(i) make the text center</li>
+                    <li>(ii) add technical image to background</li>
+                    <li>(iii)Add overlay color on hover on whole background</li>
+                </ul>
+                </p>
+            </div>
         </div>
     </section>
 
@@ -108,26 +111,26 @@
 
 
     <section id="" class="h-[95vh] py-8">
-        <div class=" px-4">
+        <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-4">About US</h2>
-        </div>
-        <!-- Instructions -->
-        <div>
-            <h1 class="text-4xl">Assigned to Areeba</h1>
-            <p class="">Make About Section awesome as you like
-            <ul class="list-inside">
-                <li>(i) Heading on the top</li>
-                <li>(ii) two sections, one on left and one on right</li>
-                <li>(iii)left section should have a heading and a paragraph about it,</li>
-                <li>(iv)right section should have an image with rounded and hover effect as well</li>
-            </ul>
-            </p>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Areeba</h1>
+                <p class="">Make About Section awesome as you like
+                <ul class="list-inside">
+                    <li>(i) Heading on the top</li>
+                    <li>(ii) two sections, one on left and one on right</li>
+                    <li>(iii)left section should have a heading and a paragraph about it,</li>
+                    <li>(iv)right section should have an image with rounded and hover effect as well</li>
+                </ul>
+                </p>
+            </div>
         </div>
     </section>
 
     <section id="" class="bg-blue-300 h-[95vh] py-8">
-        <h2 class="text-4xl">Subjects</h2>
-        <div>
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl font-bold">Subjects</h2>
             <!-- Instructions -->
             <h1 class="text-4xl">Assigned to Khadija</h1>
             <p class="">Make Subjects Section awesome as you like
@@ -144,7 +147,7 @@
 
     <section id="" class="h-[95vh] bg-purple-300 py-8">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl">Blog</h2>
+            <h2 class="text-4xl font-bold">Blog</h2>
             <!-- Instructions -->
             <div>
                 <h1 class="text-4xl">Assigned to Laiba</h1>
@@ -154,9 +157,9 @@
                 </p>
             </div>
     </section>
-    <section id="" class="h-[95vh] bg-purple-300 py-8">
+    <section id="" class="h-[95vh] bg-orange-400 py-8">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl">Photo Gallery</h2>
+            <h2 class="text-4xl font-bold">Photo Gallery</h2>
             <!-- Instructions -->
             <div>
                 <h1 class="text-4xl">Assigned to Zoha</h1>
@@ -171,7 +174,7 @@
 
     <section id="" class="bg-pink-200 h-[95vh] py-8">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-4">Testimonials</h2>
+            <h2 class="text-4xl font-bold">Testimonials</h2>
             <!-- Instructions -->
             <div>
                 <h1 class="text-4xl">Assigned to Zarnab Nadeem</h1>
@@ -182,7 +185,7 @@
     </section>
     <section id="" class="bg-green-200 h-[95vh] py-8">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-4">Signup Form</h2>
+            <h2 class="text-4xl font-bold">Signup Form</h2>
             <!-- Instructions -->
             <div>
                 <h1 class="text-4xl">Assigned to Waqar Akram Bhutta</h1>
@@ -193,7 +196,7 @@
     </section>
     <section id="" class="bg-red-300 h-[95vh] py-8">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-4">Social Media</h2>
+            <h2 class="text-4xl font-bold">Social Media</h2>
             <!-- Instructions -->
             <div>
                 <h1 class="text-4xl">Assigned to Nisha Shareef</h1>
@@ -207,7 +210,7 @@
     </section>
     <section id="" class="bg-blue-200 h-[95vh] py-8">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-4">Footer</h2>
+            <h2 class="text-4xl font-bold">Footer</h2>
             <!-- Instructions -->
             <div>
                 <h1 class="text-4xl">Assigned to Tanzila Arshad</h1>
