--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Vaneeza Noor's Code Ends here -->
 
-    <section class="py-4 h-[95vh] bg-yellow-300 py-8">
+    <section class="h-[95vh] bg-yellow-300 py-8">
         <div class="container mx-auto px-4">
 
             <h1 class="text-4xl font-bold">BSCS@2021__B</h1>
