Updated code and styles

--- a/index.html
+++ b/index.html
@@ -126,56 +126,66 @@
     </section>
 
     <!-- Khadija's Code starts here -->
-
+    
     <section id="subjects-section">
-        <h2>Subjects</h2>
+        <h2>Subjects:</h2>
         <p class="sub">List of subjects:</p>
-        <ul>
-        <li>
-            <strong>Physics</strong>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris facilisis volutpat purus, non fringilla tortor gravida ac.
-            </p>
-        </li>
-        <li>
-            <strong>Math</strong>
-            <p>
-                Nulla facilisi. Vestibulum fermentum dui in ipsum tincidunt, eu hendrerit odio consectetur.
-            </p>
-        </li>
-        <li>
-            <strong>Chemistry</strong>
-            <p>
-                Sed aliquam varius malesuada. Sed feugiat odio nec tortor dictum, sit amet ullamcorper velit semper.
-            </p>
-        </li>
-        <li>
-            <strong>Biology</strong>
-            <p>
-                In hac habitasse platea dictumst. Curabitur vel metus id mi dictum feugiat.
-            </p>
-        </li>
-        <li>
-            <strong>Urdu</strong>
-            <p>
-                Fusce consectetur cursus nibh, in maximus arcu blandit ac.
-            </p>
-        </li>
-        <li>
-            <strong>Islamic Studies</strong>
-            <p>
-                Suspendisse et ligula facilisis, viverra risus vel, fringilla felis.
-            </p>
-        </li>
-        <li>
-            <strong>English</strong>
-            <p>
-                Proin sed elit quis sem elementum posuere sit amet a tellus.
-            </p>
-        </li>
-    </ul>
-
+        <ul id="list">
+            <li>
+                <strong>Physics:</strong>
+                <p>
+                    Physics is the branch of science that deals with the structure of matter and how the fundamental
+                    constituents of the universe interact.
+                </p>
+            </li>
+            <li>
+                <strong>Math:</strong>
+                <p>
+                    Mathematics is a subject that deals with numbers, shapes, logic, quantity and arrangements. Mathematics
+                    teaches to solve problems based on numerical calculations and find the solutions.
+                </p>
+            </li>
+            <li>
+                <strong>Chemistry:</strong>
+                <p>
+                    Chemistry is the study of matter, analysing its structure, properties and behaviour to see what happens
+                    when they change in chemical reactions.
+                </p>
+            </li>
+            <li>
+                <strong>Biology:</strong>
+                <p>
+                    Biology is a branch of science that deals with living organisms and their vital processes. Biology
+                    encompasses diverse fields, including botany, conservation, ecology, evolution, genetics, etc.
+                </p>
+            </li>
+            <li>
+                <strong>Urdu:</strong>
+                <p>
+                    Urdu is an Indo-Aryan language spoken chiefly in South Asia. It is the national language and lingua
+                    franca of Pakistan, where it is also an official language alongside English.
+                </p>
+            </li>
+            <li>
+                <strong>Islamic Studies:</strong>
+                <p>
+                    Many academic Islamic Studies programs include the historical study of Islam, Islamic civilization,
+                    history of the Muslim world, historiography, Islamic law, Islamic theology and Islamic philosophy.
+                </p>
+            </li>
+            <li>
+                <strong>English:</strong>
+                <p>
+                    English is the third-most widely spoken language in the world as of 2023 and the primary language of
+                    much of the developed world, including the United States, the United Kingdom, and other nations.
+                </p>
+            </li>
+        </ul>
+    
     </section>
+    <div class="text-center text-white bg-black">Created by khadija</div>
+
+    <!-- khadija's Code Ends here -->
 
     <section id="" class="h-[95vh] bg-purple-300 py-8">
         <div class="container mx-auto px-4">
