--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="assets/js/index.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com/"></script>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="bg-gray-100">
@@ -128,7 +130,7 @@
         </div>
     </section>
     <!-- Khadija's Code starts here -->
-    
+
     <section id="subjects-section">
         <h2>Subjects:</h2>
         <p class="sub">List of subjects:</p>
@@ -143,14 +145,16 @@
             <li>
                 <strong>Math:</strong>
                 <p>
-                    Mathematics is a subject that deals with numbers, shapes, logic, quantity and arrangements. Mathematics
+                    Mathematics is a subject that deals with numbers, shapes, logic, quantity and arrangements.
+                    Mathematics
                     teaches to solve problems based on numerical calculations and find the solutions.
                 </p>
             </li>
             <li>
                 <strong>Chemistry:</strong>
                 <p>
-                    Chemistry is the study of matter, analysing its structure, properties and behaviour to see what happens
+                    Chemistry is the study of matter, analysing its structure, properties and behaviour to see what
+                    happens
                     when they change in chemical reactions.
                 </p>
             </li>
@@ -183,7 +187,7 @@
                 </p>
             </li>
         </ul>
-    
+
     </section>
     <div class="text-center text-white bg-black">Created by khadija</div>
 
