--- a/index.html
+++ b/index.html
@@ -14,22 +14,39 @@
 
     <!-- Vaneeza Noor's Code Starts here -->
 
-    <header>
-        <div class="logo">LOGO</div>
-        <nav>
-            <ul>
-                <li><a href="#">Carousel</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Photo Gallery</a></li>
-                <li><a href="#">Testimonials</a></li>
-            </ul>
-        </nav>
-        <div class="auth-buttons">
-            <a href="#" class="login-btn">Login</a>
-            <a href="#" class="signup-btn">Sign Up</a>
+    <header class="bg-red-300 text-white flex items-center justify-between p-4">
+        <!-- Logo -->
+        <div class="logo text-xl font-bold cursor-pointer">
+          LOGO
         </div>
-    </header>
+    
+        <!-- Navigation Bar -->
+        <nav>
+          <ul class="flex">
+            <li class="mr-4">
+              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Carousel</a>
+            </li>
+            <li class="mr-4">
+              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">About Us</a>
+            </li>
+            <li class="mr-4">
+              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Blog</a>
+            </li>
+            <li class="mr-4">
+              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Photo Gallery</a>
+            </li>
+            <li class="mr-4">
+                <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Testimonials</a>
+              </li>
+          </ul>
+        </nav>
+    
+        <!-- Login and Signup Buttons -->
+        <div class="auth-buttons flex items-center">
+          <a href="#" class="login-btn inline-block bg-white text-gray-700 hover:bg-gray-300 px-4 py-2 rounded">Login</a>
+          <a href="#" class="signup-btn inline-block bg-white text-gray-700 hover:bg-gray-300 px-4 py-2 rounded">Sign Up</a>
+        </div>
+      </header>
     <div class="text-center text-white bg-black">Created by Vaneeza Noor</div>
 
 
