--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Portfolio</title>
+    <title>BSCS-B 2021</title>
     <script src="assets/js/index.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com/"></script>
