--- a/index.html
+++ b/index.html
@@ -19,36 +19,38 @@
     <header class="bg-red-300 text-white flex items-center justify-between p-4">
         <!-- Logo -->
         <div class="logo text-xl font-bold cursor-pointer">
-          LOGO
+            LOGO
         </div>
-    
+
         <!-- Navigation Bar -->
         <nav>
-          <ul class="flex">
-            <li class="mr-4">
-              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Carousel</a>
-            </li>
-            <li class="mr-4">
-              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">About Us</a>
-            </li>
-            <li class="mr-4">
-              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Blog</a>
-            </li>
-            <li class="mr-4">
-              <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Photo Gallery</a>
-            </li>
-            <li class="mr-4">
-                <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Testimonials</a>
-              </li>
-          </ul>
+            <ul class="flex">
+                <li class="mr-4">
+                    <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Carousel</a>
+                </li>
+                <li class="mr-4">
+                    <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">About Us</a>
+                </li>
+                <li class="mr-4">
+                    <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Blog</a>
+                </li>
+                <li class="mr-4">
+                    <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Photo Gallery</a>
+                </li>
+                <li class="mr-4">
+                    <a href="#" class="text-white hover:bg-gray-700 rounded px-4 py-2">Testimonials</a>
+                </li>
+            </ul>
         </nav>
-    
+
         <!-- Login and Signup Buttons -->
         <div class="auth-buttons flex items-center">
-          <a href="#" class="login-btn inline-block bg-white text-gray-700 hover:bg-gray-300 px-4 py-2 rounded">Login</a>
-          <a href="#" class="signup-btn inline-block bg-white text-gray-700 hover:bg-gray-300 px-4 py-2 rounded">Sign Up</a>
+            <a href="#"
+                class="login-btn inline-block bg-white text-gray-700 hover:bg-gray-300 px-4 py-2 rounded">Login</a>
+            <a href="#" class="signup-btn inline-block bg-white text-gray-700 hover:bg-gray-300 px-4 py-2 rounded">Sign
+                Up</a>
         </div>
-      </header>
+    </header>
     <div class="text-center text-white bg-black">Created by Vaneeza Noor</div>
 
 
@@ -222,6 +224,8 @@
                 </p>
             </div>
     </section>
+
+
     <section id="" class="h-[95vh] bg-orange-400 py-8">
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold">Photo Gallery</h2>
@@ -237,6 +241,7 @@
             </div>
     </section>
 
+
     <section id="" class="bg-pink-200 h-[95vh] py-8">
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold">Testimonials</h2>
@@ -248,6 +253,8 @@
                 </p>
             </div>
     </section>
+
+
     <section id="" class="bg-green-200 h-[95vh] py-8">
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold">Signup Form</h2>
@@ -259,6 +266,104 @@
                 </p>
             </div>
     </section>
+
+
+    <section id="" class="h-[95vh] py-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-4">Skills Level</h2>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Muhammad Abdullah</h1>
+                <p class="">Make Skills Level Section awesome as you like</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section id="" class="h-[95vh] py-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-4">Programming Languages Cards</h2>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Bushra O Shafique</h1>
+                <p class="">Make your Section awesome as you like
+                    <li>Place images of some famous Programming languages</li>
+                    <li>Below them, Write their Names</li>
+                    <li>after that, write their usage in tech industry</li>
+                    <li>also add a hover effect</li>
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="" class="h-[95vh] py-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-4">Time Table</h2>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Kalsoom Tahir</h1>
+                <p class="">Make your Section awesome as you like
+                    <li>Make a beautiful time table of our class</li>
+                    <li>Use colors, shadows, borders</li>
+                    <li>Also use the properties of row span and col span</li>
+                    <li>also add a hover effect for shadow color</li>
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section id="" class="h-[95vh] py-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-4">Students info</h2>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Kashaf Noor</h1>
+                <p class="">Make your Section awesome as you like
+                    <li>Make a form where students can submit their info</li>
+                    <li>Form can take names,ag number,Phone Numbers as input</li>
+                    <li>use the border/outline properties, placeholder,values as well.</li>
+                    <li>also add a hover effect for scale(1.05) of input field.</li>
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="" class="h-[95vh] py-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-4">Student Profile Page</h2>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Muhammad Adan</h1>
+                <p class="">Make awesome as you like
+                    <li>Create another page.</li>
+                    <li>Make it like a profile of students</li>
+                    <li>Add it Navbar as a separate page</li>
+                    <li>Link it, and add a backlink form profile page to home page as well.</li>
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="" class="h-[95vh] py-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-4">Wild Card Section</h2>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Abubakar</h1>
+                <p class="">Make Section awesome as you like
+                    <li>Create a diferent section, whatever you want.</li>
+                </p>
+            </div>
+        </div>
+    </section>
+
+
     <section id="" class="bg-red-300 h-[95vh] py-8">
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold">Social Media</h2>
@@ -273,6 +378,27 @@
                 </p>
             </div>
     </section>
+
+
+    <section id="" class="bg-red-300 h-[95vh] py-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl font-bold">Online Coding Schools</h2>
+            <!-- Instructions -->
+            <div>
+                <h1 class="text-4xl">Assigned to Elsa</h1>
+                <p class="">Make your Section awesome as you like
+                    <li>place logos of some famous Online Coding Schools</li>
+                    <li>Logos should be scaled(1.05) on hover</li>
+                    <li>Write their names</li>
+                    <li>Write their info</li>
+                    <li>logo should zoom on hover</li>
+                    <li>logos should have hyperlinks behind them</li>
+                    <li>link should open in new tab</li>
+                </p>
+            </div>
+    </section>
+
+
     <section id="" class="bg-blue-200 h-[95vh] py-8">
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold">Footer</h2>
@@ -284,9 +410,6 @@
                 <p>Footer should contains links for sections and social media links dummy</p>
             </div>
     </section>
-
-
-
 </body>
 
 </html>
