--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                 </p>
             </div>
     </section>
-    <section id="" class="h-[95vh] bg-orange-400 py-8">
+    <section id="" class="h-[230vh] bg-orange-200 py-8">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl font-bold">Photo Gallery</h2>
+            <h2 class="text-4xl font-bold text-pink-950 text-center">Photo Gallery</h2>
             <!-- Instructions -->
             <!-- zoha code start from here -->
             <div class="container">
@@ -293,7 +293,9 @@
             </footer>
         
     </section>
+    <!-- ZOHA code end here -->
 
+    
     <section id="" class="bg-pink-200 h-[95vh] py-8">
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold">Testimonials</h2>
