--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <!-- Vaneeza Noor's Code Starts here -->
 
-    <header class="bg-red-300 text-white flex items-center justify-between p-4">
+    <header class="bg-slate-500 text-white flex items-center justify-between p-4">
         <!-- Logo -->
-        <div class="logo text-xl font-bold cursor-pointer">
-          LOGO
+        <div class="logo" href="#">
+            <img src="./Image/dark-mode-logo.png" alt="LOGO" class="w-12 h-12 rounded-full border-4 bg-black"/> 
+            <!-- class="w-12 h-12 rounded-full border-4 bg-purple-300"> -->
+            
         </div>
     
         <!-- Navigation Bar -->
