--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
             </a>
         </div>
     </div>
+    <div class="text-center text-white bg-black ">Created by Nisha Sharif</div>
     <!-- Nisha's Code Ends Here -->
 
 
