Zahoor Ahmad's code

--- a/index.html
+++ b/index.html
@@ -413,24 +413,132 @@
         </div>
     </section>
 
+    <!-- Zahoor Ahmad's code starts here -->
 
-    <section id="" class="h-[95vh] py-8">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-4">Time Table</h2>
-            <!-- Instructions -->
-            <div>
-                <h1 class="text-4xl">Assigned to Kalsoom Tahir</h1>
-                <p class="">Make your Section awesome as you like
-                    <li>Make a beautiful time table of our class</li>
-                    <li>Use colors, shadows, borders</li>
-                    <li>Also use the properties of row span and col span</li>
-                    <li>also add a hover effect for shadow color</li>
-                </p>
-            </div>
+    <section class="container mx-auto">
+        <h2 class="text-3xl font-bold mb-4 text-center">Time Table</h2>
+        <table class="border-collapse border border-black mt-4 w-full">
+            <thead>
+                <tr>
+                    <th class="border border-black px-4 py-2 bg-gray-200 hover:bg-gray-300 transition-color">Time
+                    </th>
+                    <th class="border border-black px-4 py-2 bg-gray-200 hover:bg-gray-300 transition-color">Monday
+                    </th>
+                    <th class="border border-black px-4 py-2 bg-gray-200 hover:bg-gray-300 transition-color">Tuesday
+                    </th>
+                    <th class="border border-black px-4 py-2 bg-gray-200 hover:bg-gray-300 transition-color">
+                        Wednesday</th>
+                    <th class="border border-black px-4 py-2 bg-gray-200 hover:bg-gray-300 transition-color">
+                        Thursday</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="border border-black px-4 py-2 hover:bg-gray-200">8:00 AM - 9:00 AM</td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-513:
+                        Web
+                        Programming
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">
+                        CS-511: Artificial Intelligence
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-505:
+                        Computer and Assembly Language
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-300 transition-colors">
+                        CS-503: Design and Analysis of Algorithms</td>
+                </tr>
+                <tr>
+                    <td class="border border-black px-4 py-2 hover:bg-gray-200">9:00 AM - 10:00 AM</td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-505:
+                        Computer and Assembly Language
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-507:
+                        System Programming
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-509
+                        Digital Signal Processing
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-300 transition-colors">
+                        CS-503: Design and Analysis of Algorithms</td>
+                </tr>
+                <tr>
+                    <td class="border border-black px-4 py-2 hover:bg-gray-200">10:00 AM - 11:00 AM</td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-513:
+                        Web
+                        Programming
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">
+                        CS-511: Artificial Intelligence
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-505:
+                        Computer and Assembly Language
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-300 transition-colors">
+                        CS-503: Design and Analysis of Algorithms</td>
+                </tr>
+                <tr>
+                    <td class="border border-black px-4 py-2 hover:bg-gray-200">11:00 AM - 12:00 PM</td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-505:
+                        Computer and Assembly Language
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-507:
+                        System Programming
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-509
+                        Digital Signal Processing
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-300 transition-colors">
+                        CS-503: Design and Analysis of Algorithms</td>
+                </tr>
+                <tr>
+                    <td class="border border-black px-4 py-2 hover:bg-gray-200">12:00 PM - 1:00 PM</td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-513:
+                        Web
+                        Programming
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">
+                        CS-511: Artificial Intelligence
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-505:
+                        Computer and Assembly Language
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-300 transition-colors">
+                        CS-503: Design and Analysis of Algorithms</td>
+                </tr>
+                <tr>
+                    <td class="border border-black px-4 py-2 hover:bg-gray-200">1:00 PM - 2:00 PM</td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-505:
+                        Computer and Assembly Language
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-507:
+                        System Programming
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">CS-509
+                        Digital Signal Processing
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-300 transition-colors">
+                        CS-503: Design and Analysis of Algorithms</td>
+                </tr>
+                <tr>
+                    <td class="border border-black px-4 py-2 hover:bg-gray-200">2:00 PM - 3:00 PM</td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">Leave
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">Leave
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">Leave
+                    </td>
+                    <td class="border border-black px-4 py-2 bg-white hover:bg-gray-100 transition-colors">Leave
+                    </td>
+                </tr>
+            </tbody>
+        </table>
         </div>
     </section>
+    <div class="text-center text-white bg-black mt-1">Created by Zahoor Ahmad</div>
 
 
+    <!-- Zahoor Ahmad's Code ends here -->
 
     <section id="" class="h-[95vh] py-8">
         <div class="container mx-auto px-4">
