--- a/index.html
+++ b/index.html
@@ -289,70 +289,73 @@
     <!--laiba code end  here-->
 
     <!-- zoha code start from here -->
-    <div class="container">
-        <div class="gallery">
-            <div class="img">
-                <img src="./assets/images/a.jpeg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/b.jpeg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/c.jpeg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/e.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/g.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/f.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/1.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/d.jpeg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/10.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/2.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/3.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/4.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/5.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/6.jpg">
-            </div>
-            <!-- <div class="img">
+    <section id="" class="bg-orange-200 h-[225vh] py-4">
+        <div class="container mx-auto px-2">
+            <h2 class="text-4xl font-bold text-center text-zinc-700">Photo Gallery</h2>
+            <div class="container">
+                <div class="gallery">
+                    <div class="img">
+                        <img src="./assets/images/a.jpeg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/b.jpeg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/c.jpeg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/e.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/g.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/f.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/1.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/d.jpeg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/10.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/2.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/3.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/4.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/5.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/6.jpg">
+                    </div>
+                    <!-- <div class="img">
                         <img src="/gallery/7.jpg">
                     </div> -->
-            <div class="img">
-                <img src="./assets/images/8.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/9.jpg">
-            </div>
-            <div class="img">
-                <img src="./assets/images/1.jpg">
-            </div>
+                    <div class="img">
+                        <img src="./assets/images/8.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/9.jpg">
+                    </div>
+                    <div class="img">
+                        <img src="./assets/images/1.jpg">
+                    </div>
 
 
-        </div>
-    </div>
-    <footer>
-        <p>Copyright 2023.All Right Reserved</p>
-        <p>Created By Zoha Asghar</p>
-    </footer>
+                </div>
+            </div>
+            <footer class="footer">
+                <p>Copyright 2023.All Right Reserved</p>
+                <p>Created By Zoha Asghar</p>
+            </footer>
 
     </section>
 
